<resources>
    <string name="app_name">TimeTracker</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>

    <string name="ok">Ok</string>
    <string name="my_day">My Day</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="task_title">Task title</string>
    <string name="date">Date</string>
    <string name="use_biometric_to_enter_the_app">Use biometric to enter the app</string>
    <string name="enable_today_section">Enable today section</string>
    <string name="change_pin">Change pin</string>
    <string name="clean_tasks">Clean tasks</string>
    <string name="clean_all_data">Clean all data</string>
</resources>