<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.timetracker.ui.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.timetracker.ui.fragment.dashboard.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.timetracker.ui.fragment.notifications.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.timetracker.ui.fragment.splash.SplashFragment"
        android:label="SplashFragment"
        tools:layout="@layout/fragment_splash" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.timetracker.ui.fragment.splash.login.LoginFragment"
        android:label="LoginFragment"
        tools:layout="@layout/fragment_login"/>
</navigation>