<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.timetracker.ui.fragment.newItem.NewItemViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                tools:background="@color/white">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/new_item_input_layout"
                    style="@style/text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    android:hint="@string/task_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/category_spinner"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    app:boxCornerRadiusBottomEnd="4dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusTopStart="4dp"
                    app:helperText="1234"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_item_input_layout"
                    android:hint="@string/category">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/filled_exposed_dropdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:enabled="true"
                        android:dropDownHeight="200dp"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_spinner_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="8dp"
                    app:boxCornerRadiusBottomEnd="4dp"
                    app:boxCornerRadiusBottomStart="4dp"
                    app:boxCornerRadiusTopEnd="4dp"
                    app:boxCornerRadiusTopStart="4dp"
                    app:helperText="1234"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_item_input_layout">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/date_drop_down_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Date"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/new_item_description_layout"
                    style="@style/text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    app:hintTextColor="@color/gray"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@id/date_spinner_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="5"
                        android:gravity="top"
                        android:maxLines="5" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>